Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29004

Crash when reloading a project

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • Qt Creator 11.0.0-beta1
    • Qt Creator 10.0.0
    • Editors
    • None
    • Linux/X11
    • f773c09f3 (master)

      It happened when I rebased my working tree from terminal (outside of Creator) and then activated Creator and confirmed that sources should be reloaded.

      The call stack from the crash:

      
      Thread 1 (Thread 0x7f6a704a9cc0 (LWP 8771)):
      #0  0x0000000000000005 in ?? ()
      #1  0x00007f6a6041d006 in TextEditor::TextDocumentLayout::documentReloaded (this=0x55f59aaffc00, marks=..., baseTextDocument=0x55f5a308dcb0) at /home/jarek/dev/creator-10/src/plugins/texteditor/textdocumentlayout.cpp:587
      #2  0x00007f6a6040c4ed in TextEditor::TextDocument::reload (this=0x55f5a308dcb0, errorString=0x7fffb49cc8f0, realFilePath=...) at /home/jarek/dev/creator-10/src/plugins/texteditor/textdocument.cpp:831
      #3  0x00007f6a6040c3dc in TextEditor::TextDocument::reload (this=0x55f5a308dcb0, errorString=0x7fffb49cc8f0) at /home/jarek/dev/creator-10/src/plugins/texteditor/textdocument.cpp:815
      #4  0x00007f6a6040c7a6 in TextEditor::TextDocument::reload (this=0x55f5a308dcb0, errorString=0x7fffb49cc8f0, flag=Core::IDocument::FlagReload, type=Core::IDocument::TypeContents) at /home/jarek/dev/creator-10/src/plugins/texteditor/textdocument.cpp:867
      #5  0x00007f6a2d04c553 in Core::DocumentManager::checkForReload (this=0x55f599bbf520) at /home/jarek/dev/creator-10/src/plugins/coreplugin/documentmanager.cpp:1229
      #6  0x00007f6a2d0659ae in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (Core::DocumentManager::*)()>::call(void (Core::DocumentManager::*)(), Core::DocumentManager*, void**) (f=(void (Core::DocumentManager::*)(Core::DocumentManager * const)) 0x7f6a2d04b1ca <Core::DocumentManager::checkForReload()>, o=0x55f599bbf520, arg=0x7fffb49ccb00) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobjectdefs_impl.h:135
      #7  0x00007f6a2d05f749 in QtPrivate::FunctionPointer<void (Core::DocumentManager::*)()>::call<QtPrivate::List<>, void>(void (Core::DocumentManager::*)(), Core::DocumentManager*, void**) (f=(void (Core::DocumentManager::*)(Core::DocumentManager * const)) 0x7f6a2d04b1ca <Core::DocumentManager::checkForReload()>, o=0x55f599bbf520, arg=0x7fffb49ccb00) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobjectdefs_impl.h:172
      #8  0x00007f6a2d059e31 in QtPrivate::QSlotObject<void (Core::DocumentManager::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x55f5a2b314e0, r=0x55f599bbf520, a=0x7fffb49ccb00, ret=0x0) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobjectdefs_impl.h:383
      #9  0x00007f6a6f995f99 in QtPrivate::QSlotObjectBase::call (this=0x55f5a2b314e0, r=0x55f599bbf520, a=0x7fffb49ccb00) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobjectdefs_impl.h:363
      #10 0x00007f6a6fa30f56 in QSingleShotTimer::timerEvent (this=0x55f5a3e91660) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qtimer.cpp:307
      #11 0x00007f6a6f9ff2b4 in QObject::event (this=0x55f5a3e91660, e=0x7fffb49ccfd0) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobject.cpp:1355
      #12 0x00007f6a717a1f74 in QApplicationPrivate::notify_helper (this=0x55f5995e63b0, receiver=0x55f5a3e91660, e=0x7fffb49ccfd0) at /home/jarek/dev/qt-64/qtbase/src/widgets/kernel/qapplication.cpp:3315
      #13 0x00007f6a717a1d66 in QApplication::notify (this=0x7fffb49cd6b0, receiver=0x55f5a3e91660, e=0x7fffb49ccfd0) at /home/jarek/dev/qt-64/qtbase/src/widgets/kernel/qapplication.cpp:3266
      #14 0x00007f6a6f974b4f in QCoreApplication::notifyInternal2 (receiver=0x55f5a3e91660, event=0x7fffb49ccfd0) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qcoreapplication.cpp:1035
      #15 0x00007f6a6f9756ed in QCoreApplication::sendEvent (receiver=0x55f5a3e91660, event=0x7fffb49ccfd0) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qcoreapplication.cpp:1451
      #16 0x00007f6a6fc11a8c in QTimerInfoList::activateTimers (this=0x55f59966f2d0) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qtimerinfo_unix.cpp:610
      #17 0x00007f6a6fdb00e6 in timerSourceDispatch (source=0x55f59966f270) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:149
      
      #18 0x00007f6a6fdb01ef in idleTimerSourceDispatch (source=0x55f59966f330) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:196
      #19 0x00007f6a6f31bd3b in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #20 0x00007f6a6f3706c8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #21 0x00007f6a6f3193e3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #22 0x00007f6a6fdb0c10 in QEventDispatcherGlib::processEvents (this=0x55f59964ec50, flags=...) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:393
      #23 0x00007f6a6b9215f2 in QXcbGlibEventDispatcher::processEvents (this=0x55f59964ec50, flags=...) at /home/jarek/dev/qt-64/qtbase/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:96
      #24 0x00007f6a6f988e41 in QEventLoop::processEvents (this=0x7fffb49cd2d0, flags=...) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qeventloop.cpp:100
      #25 0x00007f6a6f9891b0 in QEventLoop::exec (this=0x7fffb49cd2d0, flags=...) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qeventloop.cpp:182
      #26 0x00007f6a6f9754ba in QCoreApplication::exec () at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qcoreapplication.cpp:1356
      #27 0x00007f6a707dbcac in QGuiApplication::exec () at /home/jarek/dev/qt-64/qtbase/src/gui/kernel/qguiapplication.cpp:1859
      #28 0x00007f6a7179ef7d in QApplication::exec () at /home/jarek/dev/qt-64/qtbase/src/widgets/kernel/qapplication.cpp:2595
      #29 0x000055f597b5e9d0 in main (argc=1, argv=0x7fffb49cd9a8) at /home/jarek/dev/creator-10/src/app/main.cpp:794
      
      

        For Gerrit Dashboard: QTCREATORBUG-29004
        # Subject Branch Project Status CR V

            davschul David Schulz
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes