src/plugins/texteditor/textdocument.cpp
@@ -836,15 +836,14 @@ bool TextDocument::reload(QString *errorString, const FilePath &realFilePath)
     emit aboutToReload();
     auto documentLayout =
         qobject_cast<TextDocumentLayout*>(d->m_document.documentLayout());
-    TextMarks marks;
     if (documentLayout)
-        marks = documentLayout->documentClosing(); // removes text marks non-permanently
+        documentLayout->documentAboutToReload(); // removes text marks non-permanently
 
     bool success = openImpl(errorString, filePath(), realFilePath, /*reload =*/true)
                    == OpenResult::Success;
 
     if (documentLayout)
-        documentLayout->documentReloaded(marks, this); // re-adds text marks
+        documentLayout->documentReloaded(this); // re-adds text marks
     emit reloadFinished(success);
     return success;
 }
